--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@quoriel/db",
-    "description": "Мощный и гибкий интерфейс для работы с базами данных в ForgeScript, интегрирующий поддержку LMDB для надежного хранения данных",
+    "description": "Powerful and flexible interface for working with databases in ForgeScript, integrating LMDB support for reliable data storage",
     "version": "1.0.0",
     "main": "src/main.js",
     "author": "Mlad (https://github.com/eolthar)",
