--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@quoriel/db",
     "description": "Powerful and flexible interface for working with databases in ForgeScript, integrating LMDB support for reliable data storage",
-    "version": "1.1.0",
+    "version": "1.2.0",
     "main": "src/main.js",
     "author": "Mlad (https://github.com/eolthar)",
     "license": "GPL-3.0",
@@ -9,7 +9,11 @@
         "docgen": "node src/docgen.js"
     },
     "dependencies": {
-        "@tryforge/forgescript": "^2.3.0",
-        "lmdb": "^3.4.0"
-    }
+        "@quoriel/utils": "github:quoriel/utils",
+        "@tryforge/forgescript": "^2.4.1",
+        "lmdb": "^3.4.2"
+    },
+    "bundledDependencies": [
+        "@quoriel/utils"
+    ]
 }
