--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
     "name": "@quoriel/db",
     "description": "Powerful and flexible interface for working with databases in ForgeScript, integrating LMDB support for reliable data storage",
-    "version": "1.2.0",
+    "version": "1.3.0",
     "main": "src/main.js",
     "author": "Mlad (https://github.com/eolthar)",
+    "repository": "https://github.com/quoriel/db",
     "license": "GPL-3.0",
     "scripts": {
         "docgen": "node src/docgen.js"
@@ -11,5 +12,8 @@
     "dependencies": {
         "@tryforge/forgescript": "^2.4.1",
         "lmdb": "^3.4.2"
-    }
+    },
+    "files": [
+        "src/"
+    ]
 }
